<!--
  Copyright 2017 realglobe Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<resources>
    <string name="app_name">Android Library</string>
    <string name="button_base_activity">BaseActivityのサンプル</string>
    <string name="button_delete">消去</string>
    <string name="button_edit_text_utils">EditTextUtilsのサンプル</string>
    <string name="button_log">Logのサンプル</string>
    <string name="button_parse">読み取り</string>
    <string name="button_permission_check">権限確認</string>
    <string name="button_preference_utils">PreferenceUtilsのサンプル</string>
    <string name="button_reload">再読み込み</string>
    <string name="button_save">保存</string>
    <string name="button_set_log_file">決定</string>
    <string name="dummy_empty_string">空です</string>
    <string name="dummy_log_message">こんにちは</string>
    <string name="label_double">少数（倍精度）</string>
    <string name="label_float">少数</string>
    <string name="label_int">整数</string>
    <string name="label_log_assert">違反</string>
    <string name="label_log_debug">デバッグ</string>
    <string name="label_log_error">エラー</string>
    <string name="label_log_file_path">ログファイルパス</string>
    <string name="label_log_info">情報</string>
    <string name="label_log_message">メッセージ</string>
    <string name="label_log_verbose">詳細</string>
    <string name="label_log_warn">警告</string>
    <string name="label_long">整数（倍長）</string>
    <string name="label_string">文字列</string>
    <string name="notification_denied">拒否されました</string>
    <string name="notification_permissions">実行に必要な権限がありません。システム設定から許可してください</string>
    <string name="notification_permitted">許可されました</string>
    <string name="notification_preferences_delete">保存されているデータを削除しました</string>
    <string name="notification_preferences_load">保存されているデータを読み込みました</string>
    <string name="button_json_poster">JsonPosterのサンプル</string>
    <string name="post_url">POSTするURL</string>
    <string name="post_json_object">POSTするJSONオブジェクト</string>
    <string name="post">POST</string>
    <string name="notification_error">エラーが発生しました: %s</string>
</resources>
